# urubu_do_pix

./: .env.example  .gitignore  Cargo.toml  README.md  default.nix  docker-compose-dev.yaml  docker-compose.yaml
src/: audio.rs  chatbot.rs  contracts.rs  main.rs  text_generation.rs  translation.rs  tts.rs  utils.rs  video.rs
src/contracts/: browser.rs  cache.rs  http.rs  mod.rs  tts.rs
src/infra/: mod.rs
src/infra/browser/: mod.rs  stremio.rs  twitch.rs  youtube.rs
src/infra/cache/: redis.rs
src/infra/http/: client.rs
src/video_stream_api/: mod.rs
src/video_stream_api/assets/: index.html
