[package]
name = "urubu_do_pix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
dotenv = "0.15.0"
serenity = "0.11.4"
tokio = { version = "1.20.1", features = ["rt-multi-thread"] }
tracing = "0.1.35"
tracing-appender = "0.2.2"
tracing-bunyan-formatter = "0.3.3"
tracing-futures = "0.2.5"
tracing-subscriber = { version = "0.3.15", features = ["env-filter"] }
