[package]
name = "urubu_do_pix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
dotenv = "0.15.0"
tokio = { version = "1.20.1", features = ["rt-multi-thread"] }
tracing = "0.1.35"
tracing-appender = "0.2.2"
tracing-bunyan-formatter = "0.3.3"
tracing-futures = "0.2.5"
tracing-subscriber = { version = "0.3.15", features = ["env-filter"] }
songbird = "0.3.0"
rand = "0.8.5"
tracing-tree = "0.2.1"
reqwest = { version = "0.11.11", features = ["json"] }
serde = "1.0.140"
serde_json = "1.0.82"
serde_urlencoded = "0.7.1"
async-trait = "0.1.56"
futures = "0.3.21"
bytes = "1.2.1"
retry = { git = "https://github.com/PoorlyDefinedBehaviour/retry-rs.git", branch = "main" }

[dependencies.serenity]
version = "0.11.4"
default-features = false
features = ["builder", "cache", "client", "gateway", "http", "model", "utils", "rustls_backend", "client", "voice"]

[dependencies.redis]
version = "0.21"
features = ["tokio-comp"]

[dev-dependencies]
mockall = "0.11.2"
